Fix #21336 - [Feature] Sort ingList by legalName if null, keep order if one compoList item